using Fetch() api

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
    <div class="wrapper">
     <blockquote>
-        <q>lorem10' fuck you Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, nesciunt.</q>
-        <cite>-kapil rohilla</cite>
+        <q id="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, atque.</q>
+        <cite id="author">-kapil rohilla</cite>
     </blockquote>
     <button id="generate">Generator</button>
     </div>
